sys/src/linux/aarch64.rs

#[doc = "Feature/interface for resizable UIs (LV2_UI__resize)."]
#[doc = ""]
#[doc = "This structure is used in two ways: as a feature passed by the host via"]
#[doc = "LV2UI_Descriptor::instantiate(), or as an interface provided by a UI via"]
#[doc = "LV2UI_Descriptor::extension_data())."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Resize {
    #[doc = "Pointer to opaque data which must be passed to ui_resize()."]
    pub handle: LV2UI_Feature_Handle,
    #[doc = "Request/advertise a size change."]
    #[doc = ""]
    #[doc = "When provided by the host, the UI may call this function to inform the"]
    #[doc = "host about the size of the UI."]
    #[doc = ""]
    #[doc = "When provided by the UI, the host may call this function to notify the"]
    #[doc = "UI that it should change its size accordingly.  In this case, the host"]
    #[doc = "must pass the LV2UI_Handle to provide access to the UI instance."]
    #[doc = ""]
    #[doc = "@return 0 on success."]
    pub ui_resize: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2UI_Feature_Handle,
            width: ::std::os::raw::c_int,
            height: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
}
#[doc = "Feature to map port symbols to UIs."]
#[doc = ""]
#[doc = "This can be used by the UI to get the index for a port with the given"]
#[doc = "symbol.  This makes it possible to implement and distribute a UI separately"]
#[doc = "from the plugin (since symbol, unlike index, is a stable port identifier)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Port_Map {
    #[doc = "Pointer to opaque data which must be passed to port_index()."]
    pub handle: LV2UI_Feature_Handle,
    #[doc = "Get the index for the port with the given `symbol`."]
    #[doc = ""]
    #[doc = "@return The index of the port, or LV2UI_INVALID_PORT_INDEX if no such"]
    #[doc = "port is found."]
    pub port_index: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2UI_Feature_Handle,
            symbol: *const ::std::os::raw::c_char,
        ) -> u32,
    >,
}
#[doc = "Feature to subscribe to port updates (LV2_UI__portSubscribe)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Port_Subscribe {
    #[doc = "Pointer to opaque data which must be passed to subscribe() and"]
    #[doc = "unsubscribe()."]
    pub handle: LV2UI_Feature_Handle,
    #[doc = "Subscribe to updates for a port."]
    #[doc = ""]
    #[doc = "This means that the host will call the UI's port_event() function when"]
    #[doc = "the port value changes (as defined by protocol)."]
    #[doc = ""]
    #[doc = "Calling this function with the same `port_index` and `port_protocol`"]
    #[doc = "as an already active subscription has no effect."]
    #[doc = ""]
    #[doc = "@param handle The handle field of this struct."]
    #[doc = "@param port_index The index of the port."]
    #[doc = "@param port_protocol The URID of the ui:PortProtocol."]
    #[doc = "@param features Features for this subscription."]
    #[doc = "@return 0 on success."]
    pub subscribe: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2UI_Feature_Handle,
            port_index: u32,
            port_protocol: u32,
            features: *const *const LV2_Feature,
        ) -> u32,
    >,
    #[doc = "Unsubscribe from updates for a port."]
    #[doc = ""]
    #[doc = "This means that the host will cease calling calling port_event() when"]
    #[doc = "the port value changes."]
    #[doc = ""]
    #[doc = "Calling this function with a `port_index` and `port_protocol` that"]
    #[doc = "does not refer to an active port subscription has no effect."]
    #[doc = ""]
    #[doc = "@param handle The handle field of this struct."]
    #[doc = "@param port_index The index of the port."]
    #[doc = "@param port_protocol The URID of the ui:PortProtocol."]
    #[doc = "@param features Features for this subscription."]
    #[doc = "@return 0 on success."]
    pub unsubscribe: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2UI_Feature_Handle,
            port_index: u32,
            port_protocol: u32,
            features: *const *const LV2_Feature,
        ) -> u32,
    >,
}
#[doc = "A feature to notify the host that the user has grabbed a UI control."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Touch {
    #[doc = "Pointer to opaque data which must be passed to ui_resize()."]
    pub handle: LV2UI_Feature_Handle,
    #[doc = "Notify the host that a control has been grabbed or released."]
    #[doc = ""]
    #[doc = "The host should cease automating the port or otherwise manipulating the"]
    #[doc = "port value until the control has been ungrabbed."]
    #[doc = ""]
    #[doc = "@param handle The handle field of this struct."]
    #[doc = "@param port_index The index of the port associated with the control."]
    #[doc = "@param grabbed If true, the control has been grabbed, otherwise the"]
    #[doc = "control has been released."]
    pub touch: ::std::option::Option<
        unsafe extern "C" fn(handle: LV2UI_Feature_Handle, port_index: u32, grabbed: bool),
    >,
}
#[doc = "Completed successfully."]
#[doc = ""]
#[doc = "The host will set the parameter later if the user choses a new value."]
pub const LV2UI_Request_Value_Status_LV2UI_REQUEST_VALUE_SUCCESS: LV2UI_Request_Value_Status = 0;
#[doc = "Parameter already being requested."]
#[doc = ""]
#[doc = "The host is already requesting a parameter from the user (for example, a"]
#[doc = "dialog is visible), or the UI is otherwise busy and can not make this"]
#[doc = "request."]
pub const LV2UI_Request_Value_Status_LV2UI_REQUEST_VALUE_BUSY: LV2UI_Request_Value_Status = 1;
#[doc = "Unknown parameter."]
#[doc = ""]
#[doc = "The host is not aware of this parameter, and is not able to set a new"]
#[doc = "value for it."]
pub const LV2UI_Request_Value_Status_LV2UI_REQUEST_VALUE_ERR_UNKNOWN: LV2UI_Request_Value_Status =
    2;
#[doc = "Unsupported parameter."]
#[doc = ""]
#[doc = "The host knows about this parameter, but does not support requesting a"]
#[doc = "new value for it from the user.  This is likely because the host does"]
#[doc = "not have UI support for choosing a value with the appropriate type."]
pub const LV2UI_Request_Value_Status_LV2UI_REQUEST_VALUE_ERR_UNSUPPORTED:
    LV2UI_Request_Value_Status = 3;
#[doc = "A status code for LV2UI_Request_Value::request()."]
pub type LV2UI_Request_Value_Status = u32;
#[doc = "A feature to request a new parameter value from the host."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Request_Value {
    #[doc = "Pointer to opaque data which must be passed to request()."]
    pub handle: LV2UI_Feature_Handle,
    #[doc = "Request a value for a parameter from the host."]
    #[doc = ""]
    #[doc = "This is mainly used by UIs to request values for complex parameters that"]
    #[doc = "don't change often, such as file paths, but it may be used to request"]
    #[doc = "any parameter value."]
    #[doc = ""]
    #[doc = "This function returns immediately, and the return value indicates"]
    #[doc = "whether the host can fulfill the request.  The host may notify the"]
    #[doc = "plugin about the new parameter value, for example when a file is"]
    #[doc = "selected by the user, via the usual mechanism.  Typically, the host will"]
    #[doc = "send a message to the plugin that sets the new parameter value, and the"]
    #[doc = "plugin will notify the UI via a message as usual for any other parameter"]
    #[doc = "change."]
    #[doc = ""]
    #[doc = "To provide an appropriate UI, the host can determine details about the"]
    #[doc = "parameter from the plugin data as usual.  The additional parameters of"]
    #[doc = "this function provide support for more advanced use cases, but in the"]
    #[doc = "simple common case, the plugin will simply pass the key of the desired"]
    #[doc = "parameter and zero for everything else."]
    #[doc = ""]
    #[doc = "@param handle The handle field of this struct."]
    #[doc = ""]
    #[doc = "@param key The URID of the parameter."]
    #[doc = ""]
    #[doc = "@param type The optional type of the value to request.  This can be used"]
    #[doc = "to request a specific value type for parameters that support several."]
    #[doc = "If non-zero, it must be the URID of an instance of rdfs:Class or"]
    #[doc = "rdfs:Datatype."]
    #[doc = ""]
    #[doc = "@param features Additional features for this request, or NULL."]
    #[doc = ""]
    #[doc = "@return A status code which is 0 on success."]
    pub request: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2UI_Feature_Handle,
            key: LV2_URID,
            type_: LV2_URID,
            features: *const *const LV2_Feature,
        ) -> LV2UI_Request_Value_Status,
    >,
}
#[doc = "UI Idle Interface (LV2_UI__idleInterface)"]
#[doc = ""]
#[doc = "UIs can provide this interface to have an idle() callback called by the host"]
#[doc = "rapidly to update the UI."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Idle_Interface {
    #[doc = "Run a single iteration of the UI's idle loop."]
    #[doc = ""]
    #[doc = "This will be called rapidly in the UI thread at a rate appropriate"]
    #[doc = "for a toolkit main loop.  There are no precise timing guarantees, but"]
    #[doc = "the host should attempt to call idle() at a high enough rate for smooth"]
    #[doc = "animation, at least 30Hz."]
    #[doc = ""]
    #[doc = "@return non-zero if the UI has been closed, in which case the host"]
    #[doc = "should stop calling idle(), and can either completely destroy the UI, or"]
    #[doc = "re-show it and resume calling idle()."]
    pub idle:
        ::std::option::Option<unsafe extern "C" fn(ui: LV2UI_Handle) -> ::std::os::raw::c_int>,
}
#[doc = "UI Show Interface (LV2_UI__showInterface)"]
#[doc = ""]
#[doc = "UIs can provide this interface to show and hide a window, which allows them"]
#[doc = "to function in hosts unable to embed their widget.  This allows any UI to"]
#[doc = "provide a fallback for embedding that works in any host."]
#[doc = ""]
#[doc = "If used:"]
#[doc = "- The host MUST use LV2UI_Idle_Interface to drive the UI."]
#[doc = "- The UI MUST return non-zero from LV2UI_Idle_Interface::idle() when it has been closed."]
#[doc = "- If idle() returns non-zero, the host MUST call hide() and stop calling"]
#[doc = "idle().  It MAY later call show() then resume calling idle()."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Show_Interface {
    #[doc = "Show a window for this UI."]
    #[doc = ""]
    #[doc = "The window title MAY have been passed by the host to"]
    #[doc = "LV2UI_Descriptor::instantiate() as an LV2_Options_Option with key"]
    #[doc = "LV2_UI__windowTitle."]
    #[doc = ""]
    #[doc = "@return 0 on success, or anything else to stop being called."]
    pub show:
        ::std::option::Option<unsafe extern "C" fn(ui: LV2UI_Handle) -> ::std::os::raw::c_int>,
    #[doc = "Hide the window for this UI."]
    #[doc = ""]
    #[doc = "@return 0 on success, or anything else to stop being called."]
    pub hide:
        ::std::option::Option<unsafe extern "C" fn(ui: LV2UI_Handle) -> ::std::os::raw::c_int>,
}
